jaml/examples/invalid/brace_map_nl.jaml
# Brace maps with newlines are allowed in YAML, but not JAML.
# JAML's brace syntax is intentionally compact/single-line.
# For multi-line maps, use JAML's indentation-based block syntax.
# (YAML oddly rejects trailing commas, but JAML allows them in brace syntax.)
brace_map_nl: {
  a: 1, 
  b: 2, 
  c: 3
}
